# notesCapture

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  quicknote.swift  setup.sh
.github/: pull_request_template.md
docs/: architecture-v2.md  capture-event-v1.md
hammerspoon/: init.lua
mobile/ios/: README.md
partnerOS/eventsAgents/: .env.example  README.md  pyproject.toml
partnerOS/eventsAgents/docs/: code-tour.md  current-journal-contract.md  time-use-data-model.md  time-use-mvp.md
partnerOS/eventsAgents/events_agents/: __init__.py
partnerOS/eventsAgents/src/events_agents/: cli.py
partnerOS/eventsAgents/src/events_agents/adapters/: journal_fs.py
partnerOS/eventsAgents/src/events_agents/common/: ids.py  time.py
partnerOS/eventsAgents/src/events_agents/index/: schema.sql  search.py  sqlite_store.py
partnerOS/eventsAgents/src/events_agents/llm/: backend.py
partnerOS/eventsAgents/src/events_agents/llm/prompts/: extract_system.txt  relevance_system.txt
partnerOS/eventsAgents/src/events_agents/time_use/: aggregate.py  ask.py  extract.py  models.py  purpose_profile.yaml  reconcile.py  relevance.py  report.py  routing.py  taxonomy.yaml
partnerOS/eventsAgents/tests/: test_aggregate.py  test_end_to_end.py  test_extract.py  test_extract_interval_ordering.py  test_extract_more_intervals.py  test_journal_adapter.py  test_reconcile.py  test_relevance.py
scripts/: backfill_entries_to_journal.py  commit_ingress.py  import_legacy_notes.py  materialize_notes.sh  process_inbox.sh  repartition_journal.py
tests/: run_all.sh  test_notescapture.py
(+16 files in other folders)
