[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "partneros-events-agents"
version = "0.1.0"
description = "Time-use analyst MVP for partnerOS"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
partneros = "events_agents.cli:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
